# c-study

c/: 01_ArrayTest.c
c++/: 01_Hello.cpp  02_Point.cpp  Test_Circle.cpp  circle.cpp  circle.h  point.cpp
c++/Hello/: 03_Ref.cpp  Calculator.cpp  Cube.cpp  MailList.cpp  Polymorphism.cpp  point.h
c++/WorkerManagerSystem/: CMakeLists.txt  build.sh
c++/WorkerManagerSystem/docs/: workerFile.txt
c++/WorkerManagerSystem/inc/: boss.h  employee.h  manager.h  worker.h  worker_manager.h
c++/WorkerManagerSystem/src/: boss.cpp  employee.cpp  manager.cpp  worker_manager.cpp  worker_manager_system.cpp
